--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ lingualabpy_audio_triming = "lingualabpy.cli.audio_triming:main"
 lingualabpy_docx2json = "lingualabpy.cli.docx2json:main"
 lingualabpy_jsons2csv = "lingualabpy.cli.jsons2csv:main"
 lingualabpy_plot_sound = "lingualabpy.cli.plot_sound:main"
+lingualabpy_hcp_connectome = "lingualabpy.neuroimaging.hcp_connectome:main"
 
 [project.urls]
 Documentation = "https://github.com/lingualab/lingualabpy"
